# PRISM

./: LICENSE  Pipfile  README.md  pyproject.toml
src/prism/: DiagnoSR.py  Interpreter.py  a02_1_CompositeDNA_Toolkit.py  a02_2_CompositeProt_Toolkit.py  a02_3_DNAMatrix_Toolkit.py  a02_4_ProtMatrix_Toolkit.py  a03_LookingGlass.py  a04_ReGen.py  b00_bio_library.py  b01_utility.py  cli.py  config.yaml  paths.py
src/prism/DataSift_configs/: ClinicalModel.json  DiscriminatorModel.json
src/prism/ReGen_candidates/benchmark_repaired_RPs/: benchmark_ClinicalModel_dataframe.csv  benchmark_ClinicalModel_results.txt
src/prism/Screen_results/benchmark_screened/: benchmark_screened.csv  benchmark_screened_df.csv
src/prism/database/pwm_database/AA_motifs/: 1433_canoR1.txt  1433_cter2.txt  MOD_CDK_SPxK_pwm.txt  cAMP_pka_pwm.txt  ck2_pwm.txt  dbox_pwm.txt  kenbox_pwm.txt  mod_ngly_1_pwm.txt  mod_ngly_2_pwm.txt  pdz_class1.txt  pdz_class2.txt  pdz_dvl.txt  pdz_wminus1.txt  sh2_grb2like.txt  sh2_sfk2.txt  sh2_stat3.txt  sh2_stat5.txt  tyr_csk_pwm.txt
src/prism/database/pwm_database/DNA_motifs/: 3_splice_pwm.txt  5_splice_pwm.txt  CAAT_pwm.txt  CTCF_TF_pwm.txt  TATA_pwm.txt  ap1_pwm.txt  branch_pt_pwm.txt  creb_pwm.txt  inr_pwm.txt  kozak_pwm.txt  nfkb_pwm.txt  polyad_pwm.txt  sp1_pwm.txt
src/prism/gene_databank/: benchmark.fasta  test.fasta  video_test.fasta
src/prism/model_folder/ClinicalModel/: ClinicalModel_stats.txt
src/prism/model_folder/DiscriminatorModel/: DiscriminatorModel_stats.txt
