[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PRISM"
version = "0.1.0"
description = "\nA Specialized Variant Pathogenicity Screening and Gene Therapy Target Identification CLI Tool"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "biopython",
    "pyyaml",
    "xgboost",
    "tqdm",
    "ollama"
]

[project.scripts]
prism = "prism.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prism = ["**/*"]